# egb

./: Cargo.toml  README.md  index.html
.github/workflows/: pages.yml
src/: app.rs  args.rs  buttons.rs  gameboy.rs  governor.rs  lib.rs  loader.rs  main.rs  memory_map.rs  rom.rs  serial.rs  symbols.rs  time.rs  timer.rs
src/cpu/: mod.rs
src/cpu/instr/: alu16.rs  alu8.rs  bit.rs  jump.rs  load16.rs  load8.rs  misc.rs  mod.rs  rot_shift.rs  undef.rs
src/dasm/: decoder.rs  instruction.rs  mod.rs
src/debugger/: mod.rs
src/mbc/: mbc1.rs  mod.rs
src/memory/: mod.rs
src/ppu/: constants.rs  gb_image.rs  mod.rs  pixel.rs  registers.rs
src/registers/: graphics.rs  mod.rs  timer.rs
src/ui/: about.rs  address_input.rs  average.rs  breakpoints.rs  callstack.rs  cpu_panel.rs  debugger_buttons.rs  disasm_panel.rs  font.rs  indicator.rs  memory_viewer.rs  mod.rs  registers.rs  serial_console.rs  speed_input.rs  status.rs  toolbar.rs
src/ui/graphics/: background.rs  mod.rs  screen.rs  tile_data.rs  viewer.rs  viewer_context.rs  viewer_select.rs
