[package]
name = "egb"
version = "1.0.0"
edition = "2021"

[dependencies]
bitflags = "2.4.2"
bytes = "1.5.0"
clap = { version = "4.4.7", features = ["derive"] }
eframe = "0.26.1"
egui = "0.26.1"
egui-notify = "0.13.0"
egui_extras = "0.26.1"
egui_plot = "0.26.1"
env_logger = "0.11.2"
image = "0.24.9"
log = "0.4.21"
rust-embed = "8.3.0"
wasm-timer = "0.2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2.7", features = ["js"] }
tracing-wasm = "0.2"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
