[package]
name = "egb"
version = "1.2.0"
edition = "2021"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

[dependencies]
bitflags = "2.4.2"
bytes = "1.5.0"
eframe = "0.26.1"
egui = "0.26.1"
egui-notify = "0.13.0"
egui_extras = "0.26.1"
egui_plot = "0.26.1"
image = "0.24.9"
rust-embed = { version = "8.3.0", features = ['debug-embed'] }
log = "0.4.21"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.11.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2.7", features = ["js"] }
tracing-wasm = "0.2"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
wasm-timer = "0.2.5"
